--- a/aboutStaMaria.html
+++ b/aboutStaMaria.html
@@ -7,6 +7,8 @@
     <title>About</title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="images/logooo.png" type="image/png">
+
 </head>
 
 <body>
@@ -23,9 +25,9 @@
                     <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
                     <div class="dropdown-content">
                         <a href="caypombo.html">Caypombo</a>
-                        <a href="#staclara">Sta Clara</a>
-                        <a href="#pulongbuhangin">Pulong Buhangin</a>
-                        <a href="#guyong">Guyong</a>
+                        <a href="staclara.html">Sta Clara</a>
+                        <a href="pulo.html">Pulong Buhangin</a>
+                        <a href="guyong.html">Guyong</a>
                     </div>
                 </div>
             </div>
@@ -90,6 +92,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1939.7330037377476!2d120.95885234707067!3d14.818394458752806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397adb494ae6cf9%3A0xd33cff6191f679cc!2sSanta%20Maria%20Municipal%20Hall!5e0!3m2!1sfil!2sph!4v1702703554379!5m2!1sfil!2sph"
                     width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    
             </div>
 
             <a href="index.html" class="btn2">Back</a>
