--- a/resto2.html
+++ b/resto2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sangyup Garden</title>
+    <title>It’s Wings Unlimited</title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logooo.png" type="image/png">
@@ -40,66 +40,63 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Welcome to Sangyup Grden!</h2>
+            <h2 class="titleText">Welcome to It’s Wings Unlimited!</h2>
             <p class="title-text">
-                Nestled in the heart of Sta. Clara, Santa Maria, Bulacan, FIO's Sizzler beckons as a culinary gem
-                waiting to be discovered. This charming restaurant promises a distinct dining experience enveloped by
-                the town's allure. With lush greenery and a serene atmosphere, FIO's Sizzler invites you to savor a
-                unique blend of flavors in a tranquil setting.
+                It's Wing Unlimited, nestled in the vibrant heart of Caypombo, Santa Maria, Bulacan, invites you to
+                embark on a culinary journey. Surrounded by lush greenery, savor a unique dining experience with wings
+                that tantalize your taste buds in a tranquil atmosphere.
                 <br><br>
-                <img src="images/Caypombo 2.jpg" alt="">
-            <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
+                <img src="images/itswingunli.jpg" alt="">
+            <h2 class="titleText">Dive into a Culinary Extravaganza at It's Wing Unlimited!</h2>
             <p>
-                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
-                our
-                specialties:
+
+                Immerse yourself in a feast of flavors with our meticulously curated unlimited packages at It's Wing
+                Unlimited. Each offering is a gastronomic delight meticulously crafted to take your dining experience to
+                unparalleled heights. Discover our specialties:
                 <br><br>
-                <b>Unlimited Pork Delight (PHP 249.00):</b>
+                <b>Unlimited Wings Feast:</b>
                 <br><br>
-                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-                Dive into an endless array of side dishes that perfectly complement the succulent pork.
-                Satisfy your cravings with unlimited servings of steamed rice.
+                Embark on a journey through 21 exquisite flavors, all in one phenomenal package for just Php 269!
+                Indulge in wing perfection.
                 <br><br>
-                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
+                <b>Burger Bonanza:</b>
                 <br><br>
-                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-                Accompany your feast with an assortment of unlimited side dishes.
-                Fill your plate with unlimited servings of perfectly steamed rice.
+                Satisfy your cravings with our burger selections:
+                <br>
+                <br>
+                <b>Classic Burger:</b> Php 59
+                <br>
+                Buy 1 Take 1: Php 99
+                <br>
+                Burger + Fries: Php 99
+                <br>
+                Burger + Fries + Drinks: Php 119
+
                 <br><br>
-                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
+                <b> Fry Extravaganza:</b>
                 <br><br>
-                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
-                sixteen
-                flavors.
-                Elevate your dining experience with a serving of luscious steamed egg.
-                Delight in a symphony of flavors with unlimited side dishes and rice.
+                Choose from our delectable fries selection (Honey Butter, BBQ, Sour Cream, Cheese) at only Php 45.
                 <br><br>
-                <b>Irresistible Add-Ons:</b>
+                <b> Beverage Bliss:</b>
                 <br><br>
-                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
-                cheese
-                to
-                enhance your barbecue experience.
+                Quench your thirst with our refreshing drinks:
                 <br><br>
-                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
-                the
-                perfect
-                accompaniment to your flavorful meal.
+                Iced Coffee: Php 50
+                <br>
+                Iced Dark Choco: Php 60
+                <br>
+                Iced Mocha: Php 65
+                <br>
+                Iced Tea: Php 30
+                <br>
+                Red Tea: Php 30
+
                 <br><br>
-                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
-                addition
-                to your
-                feast.
-                <br><br>
-                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
-                Melona
-                Ice
-                Cream.
-                <br><br>
-                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
-                your
-                senses. Join us for an unforgettable journey of flavors and culinary wonders!
+
+                Embark on a Flavorful Odyssey at It's Wing Unlimited!
+                We extend a warm invitation to dive into our diverse and delectable specialties, meticulously crafted to
+                enchant your taste buds. Join us for an unforgettable journey of flavors and culinary wonders, where
+                each bite is a celebration of indulgence!
                 <br><br>
             <h2 class="titleText">The Place</h2>
             <p>
@@ -107,25 +104,25 @@
                 gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
                 or casual gatherings with friends.
                 <br><br>
-                <img src="images/caypombo1 ambiance.jpg" alt="">
+                <img src="images/itswingunliplace.jpg" alt="">
                 <br><br>
             <h2 class="titleText">Visit us at:</h2>
             <p>
-                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
+                Caypombo Sta Maria Bulacan, Beside Mystical Rose School of Bulacan, Across Alfamart Caypombo
             </p>
             <br>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.5302877532295!2d120.97540181095373!3d14.851597270821925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad4d5559316d%3A0x8b9f64bbc738d540!2sIt&#39;s%20Wings%20Unlimited%20-%20Caypombo!5e0!3m2!1sen!2sph!4v1705981643658!5m2!1sen!2sph"
                 width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <br><br>
             <h2 class="titleText">Operating Hours</h2>
             <p>Monday – Sunday
-                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+                1:00 PM - 9:00 PM (Orders cut off at 9:00 PM)</p>
             <br>
-            Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
-            together to create an unforgettable dining experience.
+            <p>Savor the magic at It's Wing Unlimited Caypombo! Indulge in delightful flavors and a charming vibe, creating
+            an unforgettable dining experience. Join us for a unique journey where wings steal the show, making every
+            moment special. It's not just a meal; it's an extraordinary culinary escape!
             </p>
             <a href="index.html" class="btn2">Back</a>
 
