--- a/resto6.html
+++ b/resto6.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sangyup Garden</title>
+    <title>S-pacio Restaurant and bar </title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logooo.png" type="image/png">
@@ -40,92 +41,57 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Welcome to Sangyup Grden!</h2>
+            <h2 class="titleText">Welcome to S-pacio Restaurant and bar</h2>
             <p class="title-text">
-                Nestled in the heart of Sta. Clara, Santa Maria, Bulacan, FIO's Sizzler beckons as a culinary gem
-                waiting to be discovered. This charming restaurant promises a distinct dining experience enveloped by
-                the town's allure. With lush greenery and a serene atmosphere, FIO's Sizzler invites you to savor a
-                unique blend of flavors in a tranquil setting.
+                Nestled in the vibrant town of Sta. Maria, Bulacan, S-pacio Restaurant and Bar beckons you to a haven of
+                sophisticated dining, where culinary excellence and a chic ambiance converge to create a memorable
+                experience.
                 <br><br>
-                <img src="images/Caypombo 2.jpg" alt="">
-            <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
-            <p>
-                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
-                our
-                specialties:
-                <br><br>
-                <b>Unlimited Pork Delight (PHP 249.00):</b>
-                <br><br>
-                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-                Dive into an endless array of side dishes that perfectly complement the succulent pork.
-                Satisfy your cravings with unlimited servings of steamed rice.
-                <br><br>
-                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
-                <br><br>
-                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-                Accompany your feast with an assortment of unlimited side dishes.
-                Fill your plate with unlimited servings of perfectly steamed rice.
-                <br><br>
-                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
-                <br><br>
-                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
-                sixteen
-                flavors.
-                Elevate your dining experience with a serving of luscious steamed egg.
-                Delight in a symphony of flavors with unlimited side dishes and rice.
-                <br><br>
-                <b>Irresistible Add-Ons:</b>
-                <br><br>
-                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
-                cheese
-                to
-                enhance your barbecue experience.
-                <br><br>
-                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
-                the
-                perfect
-                accompaniment to your flavorful meal.
-                <br><br>
-                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
-                addition
-                to your
-                feast.
-                <br><br>
-                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
-                Melona
-                Ice
-                Cream.
-                <br><br>
-                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
-                your
-                senses. Join us for an unforgettable journey of flavors and culinary wonders!
-                <br><br>
+                <img src="images/pulo.jpg" alt="">
+            <h2 class="titleText">Experience Culinary Elegance at S-pacio Restaurant and Bar in Sta. Maria, Bulacan!
+            </h2>
+            <br>
+            <h2>Exquisite Culinary Offerings:</h2>
+            <br>
+            Savor a gastronomic journey with our thoughtfully curated menu, designed to tantalize your taste buds and
+            elevate your dining experience. From enticing appetizers to indulgent main courses, our culinary creations
+            promise a symphony of flavors. Delight in:
+            <br><br>
+            <b>Crafted Cocktails: </b>
+            <br>
+            Immerse yourself in the art of mixology with our signature cocktails, expertly crafted to bring a burst of
+            flavors and creativity to your palate.
+            <br><br>
+            <b>Global Fusion Delicacies: </b>
+            <br>
+            Explore a world of culinary fusion, where diverse flavors come together in
+            harmony. Our gourmet dishes showcase a blend of global and local influences, promising a journey of
+            gastronomic delight.
+            <br><br>
+
             <h2 class="titleText">The Place</h2>
-            <p>
-                The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
-                gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
-                or casual gatherings with friends.
-                <br><br>
-                <img src="images/caypombo1 ambiance.jpg" alt="">
-                <br><br>
+            <p>Step into S-pacio and be enveloped in an ambiance that combines contemporary elegance with a warm and
+                inviting atmosphere. Our stylish decor and thoughtfully designed space create the perfect backdrop for
+                intimate dinners, celebratory gatherings, or casual evenings with friends.</p>
+            <br><br>
+            <img src="images/spacioplace.jpg" alt="">
+            <br><br>
             <h2 class="titleText">Visit us at:</h2>
-            <p>
-                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
-            </p>
+            <p>Km37 Pulong Buhangin SMB
+                ( front of Mcdonalds Pulong Buhangin)</p>
             <br>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15425.392112866988!2d120.9910301!3d14.8618052!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397a91103af2cef%3A0xbec5d2c8da0e767!2sS-pacio%20restobar!5e0!3m2!1sen!2sph!4v1705985552316!5m2!1sen!2sph"
                 width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <br><br>
             <h2 class="titleText">Operating Hours</h2>
             <p>Monday – Sunday
-                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+                10:00 AM - 10:00 PM</p>
             <br>
-            Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
-            together to create an unforgettable dining experience.
+            <p>At S-pacio Restaurant and Bar, we invite you to indulge in a world of culinary sophistication. Join us
+                and let your senses revel in the exquisite flavors and chic surroundings that define the essence of
+                S-pacio. Your extraordinary dining experience awaits!
             </p>
             <a href="index.html" class="btn2">Back</a>
 
@@ -199,3 +165,31 @@
 </body>
 
 </html>
+</title>
+<link rel="stylesheet" href="about.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+
+<body>
+    <header>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
+            <div class="nav-links">
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
+
+                <!-- Restaurants Dropdown -->
+                <div class="dropdown">
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
+                    <div class="dropdown-content">
+                        <a href="caypombo.html">Caypombo</a>
+                        <a href="#staclara">Sta Clara</a>
+                        <a href="#pulongbuhangin">Pulong Buhangin</a>
+                        <a href="#guyong">Guyong</a>
+                    </div>
+                </div>
+            </div>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
+        </div>
+    </header>
