--- a/subscribeForm.html
+++ b/subscribeForm.html
@@ -7,6 +7,8 @@
     <title>Subscribe</title>
     <link rel="stylesheet" href="subscribeForm.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="images/logooo.png" type="image/png">
+
 </head>
 
 <body>
@@ -23,9 +25,9 @@
                     <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
                     <div class="dropdown-content">
                         <a href="caypombo.html">Caypombo</a>
-                        <a href="#staclara">Sta Clara</a>
-                        <a href="#pulongbuhangin">Pulong Buhangin</a>
-                        <a href="#guyong">Guyong</a>
+                        <a href="staclara.html">Sta Clara</a>
+                        <a href="pulo.html">Pulong Buhangin</a>
+                        <a href="guyong.html">Guyong</a>
                     </div>
                 </div>
             </div>
