--- a/resto10.html
+++ b/resto10.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sangyup Garden</title>
+    <title>D's Secret Recipe </title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logooo.png" type="image/png">
@@ -40,92 +41,67 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Welcome to Sangyup Grden!</h2>
+            <h2 class="titleText">Welcome to D's Secret Recipe</h2>
             <p class="title-text">
-                Nestled in the heart of Sta. Clara, Santa Maria, Bulacan, FIO's Sizzler beckons as a culinary gem
-                waiting to be discovered. This charming restaurant promises a distinct dining experience enveloped by
-                the town's allure. With lush greenery and a serene atmosphere, FIO's Sizzler invites you to savor a
-                unique blend of flavors in a tranquil setting.
+                Welcome to D's Secret Recipe, a gastronomic treasure nestled in the heart of Guyong, Sta. Maria,
+                Bulacan. Step into a world where each dish is a masterpiece, and every bite is a revelation of secret
+                flavors crafted to perfection.
                 <br><br>
-                <img src="images/Caypombo 2.jpg" alt="">
-            <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
-            <p>
-                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
-                our
-                specialties:
-                <br><br>
-                <b>Unlimited Pork Delight (PHP 249.00):</b>
-                <br><br>
-                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-                Dive into an endless array of side dishes that perfectly complement the succulent pork.
-                Satisfy your cravings with unlimited servings of steamed rice.
-                <br><br>
-                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
-                <br><br>
-                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-                Accompany your feast with an assortment of unlimited side dishes.
-                Fill your plate with unlimited servings of perfectly steamed rice.
-                <br><br>
-                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
-                <br><br>
-                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
-                sixteen
-                flavors.
-                Elevate your dining experience with a serving of luscious steamed egg.
-                Delight in a symphony of flavors with unlimited side dishes and rice.
-                <br><br>
-                <b>Irresistible Add-Ons:</b>
-                <br><br>
-                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
-                cheese
-                to
-                enhance your barbecue experience.
-                <br><br>
-                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
-                the
-                perfect
-                accompaniment to your flavorful meal.
-                <br><br>
-                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
-                addition
-                to your
-                feast.
-                <br><br>
-                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
-                Melona
-                Ice
-                Cream.
-                <br><br>
-                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
-                your
-                senses. Join us for an unforgettable journey of flavors and culinary wonders!
-                <br><br>
+                <img src="images/secretlogo.jpg" alt="">
+            <h2 class="titleText"> Experience Culinary Magic at D's Secret Recipe in Guyong, Sta. Maria, Bulacan!
+            </h2>
+            <br>
+            <h2>Unveiling the Culinary Secrets:</h2>
+            <br>
+            <b>Truffle Infused Pasta - Php 220:</b>
+            Indulge in the luxurious aroma of truffles with our Truffle Infused Pasta. A harmonious blend of al dente
+            pasta and the earthy richness of truffle oil.
+            <br><br>
+
+            <b>Grilled Salmon Delight - Php 350:</b>
+            Elevate your dining experience with the Grilled Salmon Delight. Perfectly grilled salmon fillet served with
+            a medley of seasonal vegetables and our signature sauce.
+            <br><br>
+            <b>Secret Recipe Chicken Wings - Php 180:</b>
+            Dive into the mystery of our Secret Recipe Chicken Wings. Crispy on the outside, tender on the inside, and
+            coated in a secret sauce that keeps you coming back for more.
+            <br><br>
+            <b>Seafood Ramyun Delight - Php 220:</b>
+            Indulge in the oceanic symphony of flavors with our Seafood Ramyun Delight. Packed with fresh seafood and
+            aromatic broth, it's a feast for the senses.
+            <br><br>
+            <h2>Delightful Surprises Beyond the Ordinary:</h2>
+            <br>
+            <b>Signature Seafood Paella - Php 380:</b>
+            Immerse yourself in the rich flavors of our Signature Seafood Paella. A tantalizing fusion of
+            saffron-infused rice, assorted seafood, and Spanish-inspired goodness.
+            <br><br>
+            <b>Decadent Chocolate Lava Cake - Php 150:</b>
+            Conclude your culinary journey on a sweet note with our Decadent Chocolate Lava Cake. A divine creation that
+            oozes velvety chocolate with every indulgent spoonful.
+            <br><br>
             <h2 class="titleText">The Place</h2>
-            <p>
-                The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
-                gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
-                or casual gatherings with friends.
-                <br><br>
-                <img src="images/caypombo1 ambiance.jpg" alt="">
-                <br><br>
+            <p>At D's Secret Recipe, we believe in creating more than just meals; we curate experiences. Our cozy
+                ambiance, attentive service, and thoughtfully designed interiors provide the perfect backdrop for
+                intimate gatherings, celebrations, and memorable moments.</p>
+            <br><br>
+            <img src="images/secretplace.jpg" alt="">
+            <br><br>
             <h2 class="titleText">Visit us at:</h2>
-            <p>
-                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
-            </p>
+            <p>0960 ME NATIONAL RD BRGY GUYONG, STA MARIA, Bulacan, Philippines</p>
             <br>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.5796920400035!2d120.97727181095384!3d14.848829070890854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397adff9ffecfd5%3A0x9c5df4f2b500268d!2sPipoy&#39;s%20Ramyun%20House!5e0!3m2!1sen!2sph!4v1705991010442!5m2!1sen!2sph"
                 width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <br><br>
             <h2 class="titleText">Operating Hours</h2>
             <p>Monday – Sunday
-                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+                11:00 AM - 12:00AM</p>
             <br>
-            Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
-            together to create an unforgettable dining experience.
+            <p>Embark on a culinary adventure at D's Secret Recipe, where every dish is a testament to our dedication to
+                culinary excellence. Join us and let the secrets unfold on your palate. Your journey to exceptional
+                dining starts here!
             </p>
             <a href="index.html" class="btn2">Back</a>
 
@@ -199,3 +175,31 @@
 </body>
 
 </html>
+</title>
+<link rel="stylesheet" href="about.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+
+<body>
+    <header>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
+            <div class="nav-links">
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
+
+                <!-- Restaurants Dropdown -->
+                <div class="dropdown">
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
+                    <div class="dropdown-content">
+                        <a href="caypombo.html">Caypombo</a>
+                        <a href="#staclara">Sta Clara</a>
+                        <a href="#pulongbuhangin">Pulong Buhangin</a>
+                        <a href="#guyong">Guyong</a>
+                    </div>
+                </div>
+            </div>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
+        </div>
+    </header>
