--- a/resto5.html
+++ b/resto5.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sangyup Garden</title>
+    <title>Diko's Farm Grill and Restaurant </title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logooo.png" type="image/png">
@@ -40,92 +41,65 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Welcome to Sangyup Grden!</h2>
+            <h2 class="titleText">Welcome to Diko's Farm Grill and Restaurant </h2>
             <p class="title-text">
-                Nestled in the heart of Sta. Clara, Santa Maria, Bulacan, FIO's Sizzler beckons as a culinary gem
-                waiting to be discovered. This charming restaurant promises a distinct dining experience enveloped by
-                the town's allure. With lush greenery and a serene atmosphere, FIO's Sizzler invites you to savor a
-                unique blend of flavors in a tranquil setting.
+                Nestled in the scenic surroundings of Sta. Maria, Bulacan, Diko's Farm Grill and Restaurant invites you
+                to embark on a gastronomic journey where farm-fresh ingredients meet culinary expertise.
                 <br><br>
-                <img src="images/Caypombo 2.jpg" alt="">
-            <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
-            <p>
-                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
-                our
-                specialties:
-                <br><br>
-                <b>Unlimited Pork Delight (PHP 249.00):</b>
-                <br><br>
-                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-                Dive into an endless array of side dishes that perfectly complement the succulent pork.
-                Satisfy your cravings with unlimited servings of steamed rice.
-                <br><br>
-                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
-                <br><br>
-                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-                Accompany your feast with an assortment of unlimited side dishes.
-                Fill your plate with unlimited servings of perfectly steamed rice.
-                <br><br>
-                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
-                <br><br>
-                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
-                sixteen
-                flavors.
-                Elevate your dining experience with a serving of luscious steamed egg.
-                Delight in a symphony of flavors with unlimited side dishes and rice.
-                <br><br>
-                <b>Irresistible Add-Ons:</b>
-                <br><br>
-                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
-                cheese
-                to
-                enhance your barbecue experience.
-                <br><br>
-                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
-                the
-                perfect
-                accompaniment to your flavorful meal.
-                <br><br>
-                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
-                addition
-                to your
-                feast.
-                <br><br>
-                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
-                Melona
-                Ice
-                Cream.
-                <br><br>
-                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
-                your
-                senses. Join us for an unforgettable journey of flavors and culinary wonders!
-                <br><br>
+                <img src="images/dikoslogo.jpg" alt="">
+            <h2 class="titleText"> Experience Culinary Delight at Diko's Farm Grill and Restaurant! </h2>
+            <br>
+            <h2>Farm-to-Table Goodness:</h2>
+            <br>
+            At Diko's, we take pride in offering a farm-to-table dining experience, ensuring that every dish
+            reflects the freshness and quality of locally sourced ingredients. Our menu is a celebration of flavors
+            inspired by the bountiful harvests of our very own farm.
+            <br><br>
+            <b>Grilled Farm Fresh Platter - Php 350: </b>
+            <br>
+            Indulge in a medley of freshly grilled vegetables and succulent meats, capturing the essence of farm
+            goodness.
+            <br><br>
+            <b>Diko's Special Bulalo - Php 280:</b>
+            <br>
+            A comforting bowl of bulalo crafted with care, brimming with rich broth and tender beef, creating a
+            soul-satisfying dish.
+            <br><br>
+            <b>Farmhouse Pizza - Php 220: </b>
+            <br>
+            Our unique take on pizza, topped with farm-fresh produce and premium cheeses for a delightful and cheesy
+            bite.
+            <br><br>
+            <b>Harvest Salad Bowl - Php 180: </b>
+            <br>
+            A refreshing ensemble of crisp greens, vibrant vegetables, and house-made dressings, offering a burst of
+            farm-fresh flavors.
+            <br><br>
+
             <h2 class="titleText">The Place</h2>
-            <p>
-                The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
-                gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
-                or casual gatherings with friends.
-                <br><br>
-                <img src="images/caypombo1 ambiance.jpg" alt="">
-                <br><br>
+            <p>Diko's Farm Grill and Restaurant is more than just a dining destination; it's an escape into the rustic
+                charm of the countryside. Our cozy and welcoming ambiance is enhanced by the lush greenery surrounding
+                the establishment, providing a tranquil setting for a delightful meal.</p>
+            <br><br>
+            <img src="images/dikosplace.jpg" alt="">
+            <br><br>
             <h2 class="titleText">Visit us at:</h2>
             <p>
-                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
-            </p>
+                Bypass Rd. Santa Clara, Sta. Maria, Bulacan
+                (Near Waltermart infront of Shell Gas Station and Burger King) </p>
             <br>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15428.287898146724!2d120.9520331!3d14.8212181!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397adad4134fd9d%3A0x3bb56292761f640b!2sDIKO&#39;S%20BUFFET!5e0!3m2!1sen!2sph!4v1705985028589!5m2!1sen!2sph"
                 width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <br><br>
             <h2 class="titleText">Operating Hours</h2>
             <p>Monday – Sunday
-                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+                6:00 AM - 9:00 PM</p>
             <br>
-            Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
-            together to create an unforgettable dining experience.
+            <p>Whether you're seeking a relaxing weekend lunch or planning a family celebration, Diko's Farm Grill and
+                Restaurant is your haven for genuine farm-to-table experiences. Join us and savor the goodness that
+                nature has to offer on every plate. Dine with us and let the flavors of the farm captivate your senses!
             </p>
             <a href="index.html" class="btn2">Back</a>
 
@@ -199,3 +173,31 @@
 </body>
 
 </html>
+</title>
+<link rel="stylesheet" href="about.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+
+<body>
+    <header>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
+            <div class="nav-links">
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
+
+                <!-- Restaurants Dropdown -->
+                <div class="dropdown">
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
+                    <div class="dropdown-content">
+                        <a href="caypombo.html">Caypombo</a>
+                        <a href="#staclara">Sta Clara</a>
+                        <a href="#pulongbuhangin">Pulong Buhangin</a>
+                        <a href="#guyong">Guyong</a>
+                    </div>
+                </div>
+            </div>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
+        </div>
+    </header>
