--- a/resto9.html
+++ b/resto9.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sangyup Garden</title>
+    <title>Pipoy's Ramyun House </title>
     <link rel="stylesheet" href="about.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="images/logooo.png" type="image/png">
@@ -40,92 +41,68 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Welcome to Sangyup Grden!</h2>
+            <h2 class="titleText">Welcome to Pipoy's Ramyun House </h2>
             <p class="title-text">
-                Nestled in the heart of Sta. Clara, Santa Maria, Bulacan, FIO's Sizzler beckons as a culinary gem
-                waiting to be discovered. This charming restaurant promises a distinct dining experience enveloped by
-                the town's allure. With lush greenery and a serene atmosphere, FIO's Sizzler invites you to savor a
-                unique blend of flavors in a tranquil setting.
+                Welcome to Pipoy's Ramyun House, a haven for ramyun enthusiasts in the heart of Sta. Maria, Bulacan.
+                Step into a world of savory delights where rich broths, perfectly cooked noodles, and a symphony of
+                flavors come together to redefine your ramyun experience.
                 <br><br>
-                <img src="images/Caypombo 2.jpg" alt="">
-            <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
-            <p>
-                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
-                our
-                specialties:
-                <br><br>
-                <b>Unlimited Pork Delight (PHP 249.00):</b>
-                <br><br>
-                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-                Dive into an endless array of side dishes that perfectly complement the succulent pork.
-                Satisfy your cravings with unlimited servings of steamed rice.
-                <br><br>
-                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
-                <br><br>
-                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-                Accompany your feast with an assortment of unlimited side dishes.
-                Fill your plate with unlimited servings of perfectly steamed rice.
-                <br><br>
-                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
-                <br><br>
-                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
-                sixteen
-                flavors.
-                Elevate your dining experience with a serving of luscious steamed egg.
-                Delight in a symphony of flavors with unlimited side dishes and rice.
-                <br><br>
-                <b>Irresistible Add-Ons:</b>
-                <br><br>
-                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
-                cheese
-                to
-                enhance your barbecue experience.
-                <br><br>
-                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
-                the
-                perfect
-                accompaniment to your flavorful meal.
-                <br><br>
-                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
-                addition
-                to your
-                feast.
-                <br><br>
-                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
-                Melona
-                Ice
-                Cream.
-                <br><br>
-                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
-                your
-                senses. Join us for an unforgettable journey of flavors and culinary wonders!
-                <br><br>
+                <img src="images/pipoyslogo.jpg" alt="">
+            <h2 class="titleText"> Discover Culinary Bliss at Pipoy's Ramyun House in Sta. Maria, Bulacan!
+            </h2>
+            <br>
+            <h2>Signature Ramyun Creations:</h2>
+            <br>
+            <h2>Appetizers:</h2>
+            <br>
+            <b>Classic Beef Ramyun - Php 180:</b>
+            Dive into a bowl of comforting beef ramyun, featuring tender slices of beef, springy noodles, and a
+            broth that whispers of culinary mastery.
+            <br><br>
+            <b>Calamari Fritti - Php 150: </b>
+            <br>
+            Crispy fried calamari rings served with zesty marinara sauce.
+            <br><br>
+            <b>Spicy Kimchi Ramyun - Php 200:</b>
+            Ignite your taste buds with the fiery goodness of our Spicy Kimchi Ramyun. A perfect balance of spice and
+            tang, this bowl is a culinary adventure you won't forget.
+            <br><br>
+            <b>Seafood Ramyun Delight - Php 220:</b>
+            Indulge in the oceanic symphony of flavors with our Seafood Ramyun Delight. Packed with fresh seafood and
+            aromatic broth, it's a feast for the senses.
+            <br><br>
+            <h2>Pipoy's Specialties Beyond Ramyun:</h2>
+            <br>
+            <b>Bibimbap Bonanza - Php 250:</b>
+            Experience the vibrant medley of flavors in our Bibimbap Bonanza. A bowl of mixed rice, vegetables, and your
+            choice of protein, topped with a fried egg.
+            <br><br>
+            <b>Korean Fried Chicken - Php 220:</b>
+            Crispy, succulent, and bursting with Korean flavors, our Korean Fried Chicken is a must-try for fried
+            chicken enthusiasts.
+            <br><br>
             <h2 class="titleText">The Place</h2>
-            <p>
-                The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
-                gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
-                or casual gatherings with friends.
-                <br><br>
-                <img src="images/caypombo1 ambiance.jpg" alt="">
-                <br><br>
+            <p>At Pipoy's Ramyun House, we believe in offering more than just delicious food. Our cozy ambiance and
+                welcoming atmosphere provide the perfect setting for casual gatherings, solo ramyun adventures, or
+                intimate meals with loved ones.</p>
+            <br><br>
+            <img src="images/pipoysplace.jpg" alt="">
+            <br><br>
             <h2 class="titleText">Visit us at:</h2>
-            <p>
-                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
-            </p>
+            <p>608A, Caypombo, Santa Maria, Bulacan</p>
             <br>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.5796920400035!2d120.97727181095384!3d14.848829070890854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397adff9ffecfd5%3A0x9c5df4f2b500268d!2sPipoy&#39;s%20Ramyun%20House!5e0!3m2!1sen!2sph!4v1705991010442!5m2!1sen!2sph"
                 width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <br><br>
             <h2 class="titleText">Operating Hours</h2>
             <p>Monday – Sunday
-                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+                3:00 AM - 10:30PM</p>
             <br>
-            Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
-            together to create an unforgettable dining experience.
+            <p>Embark on a journey of taste and aroma at Pipoy's Ramyun House, where every bowl tells a story of
+                culinary craftsmanship. Join us and let the warmth of our ramyun and hospitality envelop your senses.
+                Your ramyun haven awaits
             </p>
             <a href="index.html" class="btn2">Back</a>
 
@@ -199,3 +176,31 @@
 </body>
 
 </html>
+</title>
+<link rel="stylesheet" href="about.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+
+<body>
+    <header>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
+            <div class="nav-links">
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
+
+                <!-- Restaurants Dropdown -->
+                <div class="dropdown">
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
+                    <div class="dropdown-content">
+                        <a href="caypombo.html">Caypombo</a>
+                        <a href="#staclara">Sta Clara</a>
+                        <a href="#pulongbuhangin">Pulong Buhangin</a>
+                        <a href="#guyong">Guyong</a>
+                    </div>
+                </div>
+            </div>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
+        </div>
+    </header>
